Sample-app-dev/kubernetes-manifests/app/app-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-leave-deployment
  labels:
    app: api-leave

spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-leave
  template:
    metadata:
      labels:
        app: api-leave
    spec:
      containers:
        - name: api-leave-container
          image: api-leave:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
