Sample-app-dev/kubernetes-manifests/app/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-leave-service
  labels:
    app: api-leave
spec:
  type: NodePort
  selector:
    app: api-leave
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30080
