Sample-app-dev/kubernetes-manifests/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "leave-api.local"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-leave-service
                port:
                  number: 80
